test-cases/final-dump/backquote_empty.exp
Error detected during loading module: backquote_empty
[91mfinal-dump/backquote_empty.wybe:1:5: Syntax error: unexpected empty backquoted symbol
expecting simple expression
[0m
