test-cases/final-dump/backquote_empty.wybe
def `` = 1 # empty backquoted symbol
